@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.10 2004/12/19 03:18:30 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.11 2004/12/19 06:44:16 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  19 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
+  Exit button works. Load button works.
 
   18 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Added Load/Save buttons and images (don't do anything yet). Reordered
